Removed unnecessary scripts from app.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <fieldset class="form-fieldset ui-input __second">
         <input type="email" id="email" tabindex="0" />
         <label for="email">
-            <span data-text="Alias">Alias (optional)</span>
+            <span data-text="Alias (optional)">Alias (optional)</span>
         </label>
     </fieldset>
     
