--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
 <h1>LinkCondenser</h1>
 <h2>Shorten Link</h2>
-<form class="form" action="#" method="POST">
+<form class="form" action="/" method="POST">
     <fieldset class="form-fieldset ui-input __first">
-        <input type="text" id="username" tabindex="0" />
-        <label for="username">
+        <input name="url" type="text" id="url" tabindex="0" />
+        <label for="url">
             <span data-text="URL">URL</span>
         </label>
     </fieldset>
     
     <fieldset class="form-fieldset ui-input __second">
-        <input type="email" id="email" tabindex="0" />
-        <label for="email">
+        <input name="alias" type="text" id="alias" tabindex="0" />
+        <label for="alias">
             <span data-text="Alias (optional)">Alias (optional)</span>
         </label>
     </fieldset>
