--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,8 @@
 <% if(url) { %>
     <div>
         <p>Your link to <%= url.url %></p>
-        <a href="<%= 'http://' + url.host + '/r/' + url.alias %>" target="_blank">
-            <%= 'http://' + url.host + '/r/' + url.alias %>
+        <a href="<%= url.host + '/r/' + url.alias %>" target="_blank">
+            <%= url.host + '/r/' + url.alias %>
         </a>
     </div>
 <% } %>
