Crude prototype - needs error handling and validation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
     </div>
 </form>
 
+<!-- This to be a box that fades in on link submission: Same box to be used for errors, validation and link details -->
 <% if(url) { %>
     <div>
         <p>Your link to <%= url.url %></p>
